<resources>
    <string name="app_name">Rainbow battery monitor</string>
    <string name="preference_file_key">pKey</string>
    <string name="app_title">Rainbow battery monitor</string>
    <string name="filter_title_rainbowbattery">Rainbow battery monitor</string>

    <string name="fire">Retry</string>
    <string name="cancel">I got it</string>
    <string name="permission_needed">Permission needed</string>
    <string name="dialog_fire_missiles">
        Permission to access media and files is not granted.
        In order to use your own notification sounds, Rainbow
        Battery Monitor needs this particular permission.
        \nIf you do not want to enable this permission, the app will
        function properly, except, that you won\'t be able to use your
        own notification sounds.
        </string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary">Change
        the general behavior</string>

    <string name="pref_header_notification">Notification Layout</string>
    <string name="pref_header_notification_summary">Specify the information
        shown in the system message</string>

    <string name="pref_header_layout">Battery Bar Layout</string>
    <string name="pref_header_layout_summary">Customize the battery
        bar layout and position</string>

    <string name="pref_header_sound">Sound Notifications</string>
    <string name="pref_header_sound_summary">Define notification
        sounds for diverse battery events</string>

    <string name="pref_header_about">About</string>
    <string name="pref_header_about_permissions">
        The application uses the following permissions:\n\n
        &lt;access storage&gt;\n
        &lt;access your photos and media files&gt;\n\n
        In order to use your own notification sounds, Rainbow
        Battery Monitor needs this particular permission.\n
        If you do not want to enable this, the app will
        function properly, except, that you won\'t be able to use your
        own notification sounds.\n\n
        &lt;draw over other apps&gt;\n\n
        Battery bar is always visible.
        This particular permission
        is needed to achieve this functionality. If yout don\' allow this,
        the application will not work.

    </string>

    <!-- -->
    <string name="start_on_boot">Start on boot</string>
    <string name="start_on_boot_s">If on, the battery monitor will start on boot.</string>
    <string name="led_on">Use LED</string>
    <string name="led_on_s">If on, the LED will reflect with its color the charge status. Not all models support it.</string>
    <string name="extra_text">Debug</string>
    <string name="extra_text_s">
        If on, the notification message will display
        extra debugging information. Only for developer.
        </string>
    <string name="suppress_notification">Suppress notification</string>
    <string name="suppress_notification_s">
        If on, the notification message will suppressed.
        In this case you should manually start the application
        whenever you want to change any of its parameters.
        </string>

    <!-- Battery notification settings -->
    <string name="battery_sound">Sound settings</string>

    <!--battery notification options -->
    <string name="play_battery_full_sound">Sound when full</string>
    <string name="play_battery_full_sound_s">
        If on, notification sound will be played once
        battery reaches full charge state (96 %).</string>
    <string name="play_battery_empty_sound">Sound when empty</string>
    <string name="play_battery_empty_sound_s">
        If on, notification sound will be played once
        battery reaches low charge state (15 %).</string>
    <string name="repeat_battery_full_sound">Repeat battery full sound</string>
    <string name="repeat_battery_full_sound_s">Repeat battery full sound</string>
    <string name="repeat_battery_empty_sound">Repeat battery empty sound</string>
    <string name="repeat_battery_empty_sound_s">Repeat battery empty sound</string>

    <!--battery full notification sound -->
    <string name="battery_full_sound">Notification sound</string>
    <string name="battery_full_sound_s">The picked sound will be played when battery full.</string>
    <!--battery empty notification sound -->
    <string name="battery_empty_sound">Notification sound</string>
    <string name="battery_empty_sound_s">The picked sound will be played when battery empty.</string>

    <!--Battery Bar Layout -->
    <string name="bar_layout">Battery Bar Layout</string>
    <string name="pref_bar_thickness">Battery bar thickness</string>
    <string name="pref_bar_thickness_s">Battery Bar Thickness</string>
    <string-array name="pref_bar_thickness_titles">
        <item>Thin</item>
        <item>Medium Thin</item>
        <item>Medium</item>
        <item>Medium Fat</item>
        <item>Fat</item>
    </string-array>
    <string-array name="pref_bar_thickness_values">
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
    </string-array>

    <string name="pref_bar_thickness_default">8</string>

    <!--Battery Bar Position -->
    <string name="bar_position">Battery Bar Position</string>
    <string name="pref_bar_position">Battery bar position</string>
    <string name="pref_bar_position_s">Battery Bar Position</string>
    <string-array name="pref_bar_position_titles">
        <item>Top</item>
        <item>Bottom</item>
        <item>Left-top-down</item>
        <item>Left-down-top</item>
        <item>Right-top-down</item>
        <item>Right-down-top</item>
    </string-array>
    <string-array name="pref_bar_position_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_bar_position_default">0</string>

    <!--Message attributes-->
    <!--Settings activity keyword text-->
    <string name="info_in_the_message">Notification Info Details</string>
    <string name="battery_percent">Battery percent</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_health">Battery health</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_power_source">Charging source</string>
    <string name="battery_technology">Battery technology</string>
    <string name="battery_voltage">Battery voltage</string>
    <!--Settings activity summary text-->
    <string name="battery_percent_s">The actual battery percent</string>
    <string name="battery_temperature_s">The actual battery temperature in C°</string>
    <string name="battery_health_s">Battery health flag (2=OK; more info in android dok)</string>
    <string name="battery_status_s">Battery status flag (2=charging; more info in android dok)</string>
    <string name="battery_power_source_s">Power source flag (2=AC; more info in android dok)</string>
    <string name="battery_technology_s">Battery technology text (Li-Ion)</string>
    <string name="battery_voltage_s">Battery voltage in mV</string>
    <!--notification text-->
    <string name="battery_percent_n">Battery Percent</string>
    <string name="battery_temperature_n">Battery Temperature</string>
    <string name="battery_health_n">Battery Health</string>
    <string name="battery_status_n">Battery Status</string>
    <string name="battery_power_source_n">Charging Source</string>
    <string name="battery_technology_n">Battery Technology</string>
    <string name="battery_voltage_n">Battery Voltage</string>
    <string name="battery_voltage_n_uom">mV</string>

    <string name="pref_ringtone_silent">Silent</string>

    <!-- notification keywords -->
    <string-array name="power_sources">
        <item>battery</item>
        <item>AC charger</item>
        <item>USB port</item>
        <item>unknown (3)</item>
        <item>wireless</item>
        <item>no info present</item>
    </string-array>

    <string-array name="battery_statuses">
        <item>no info present</item>
        <item>UNKNOWN</item>
        <item>charging</item>
        <item>discharging</item>
        <item>not charging</item>
        <item>full</item>
    </string-array>

    <string-array name="battery_health">
        <item>no info present</item>
        <item>UNKNOWN</item>
        <item>good</item>
        <item>overheat</item>
        <item>dead</item>
        <item>over voltage</item>
        <item>unknown (6)</item>
        <item>cold</item>
    </string-array>

    <string name="permission_granted">All permissions granted</string>
    <string name="permission_not_granted">Not all permissions granted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
