<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/info_in_the_message">

        <SwitchPreference
            android:defaultValue="true"
            android:key="battery_percent"
            android:summary="@string/battery_percent_s"
            android:title="@string/battery_percent" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="battery_temperature"
            android:summary="@string/battery_temperature_s"
            android:title="@string/battery_temperature" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="battery_health"
            android:summary="@string/battery_health_s"
            android:title="@string/battery_health" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="battery_status"
            android:summary="@string/battery_status_s"
            android:title="@string/battery_status" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="battery_power_source"
            android:summary="@string/battery_power_source_s"
            android:title="@string/battery_power_source" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="battery_technology"
            android:summary="@string/battery_technology_s"
            android:title="@string/battery_technology" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="battery_voltage"
            android:summary="@string/battery_voltage_s"
            android:title="@string/battery_voltage" />

    </PreferenceCategory>

</PreferenceScreen>
