<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="start_on_boot"
            android:summary="@string/start_on_boot_s"
            android:title="@string/start_on_boot" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="led_on"
            android:dependency="suppress_notification"
            android:summary="@string/led_on_s"
            android:title="@string/led_on" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="extra_text"
            android:summary="@string/extra_text_s"
            android:title="@string/extra_text" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="suppress_notification"
            android:disableDependentsState="true"
            android:summary="@string/suppress_notification_s"
            android:title="@string/suppress_notification" />

    </PreferenceCategory>

</PreferenceScreen>
