<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/bar_layout">

        <ListPreference
            android:defaultValue="@string/pref_bar_thickness_default"
            android:summary="@string/pref_bar_thickness_s"
            android:entries="@array/pref_bar_thickness_titles"
            android:entryValues="@array/pref_bar_thickness_values"
            android:key="bar_thickness"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_bar_thickness" />

        <ListPreference
            android:defaultValue="@string/pref_bar_position_default"
            android:summary="@string/pref_bar_position_s"
            android:entries="@array/pref_bar_position_titles"
            android:entryValues="@array/pref_bar_position_values"
            android:key="bar_position"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_bar_position" />
    </PreferenceCategory>

</PreferenceScreen>
